# swagger.json
@@ -2257,10 +2257,12 @@
           {
             "name": "companyId",
             "in": "path",
-            "description": "company to whom supplier is going to be added"
+            "description": "company to whom supplier is going to be added",
+            "type": "string",
+            "required": true
           }
         ],
-        "response": {
+        "responses": {
           "200": {
             "description": "Successful",
             "schema": {
@@ -2284,7 +2286,7 @@
             }
           }
         ],
-        "response": {
+        "responses": {
           "200": {
             "description": "Sucessful",
             "schema": {
@@ -2319,7 +2321,7 @@
             }
           }
         ],
-        "response": {
+        "responses": {
           "200": {
             "description": "Sucessful",
             "schema": {
@@ -2346,7 +2348,7 @@
             }
           }
         ],
-        "response": {
+        "responses": {
           "200": {
             "description": "Successful",
             "schema": {
@@ -2373,7 +2375,7 @@
             }
           }
         ],
-        "response": {
+        "responses": {
           "200": {
             "description": "Successful",
             "schema": {
@@ -3450,12 +3452,6 @@
         "country": {
           "type": "string"
         },
-        "tags": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        },
         "category": {
           "type": "string"
         },
@@ -3468,14 +3464,7 @@
       }
     },
     "editSupplier": {
-      "required": [
-        "email",
-        "country",
-        "tags",
-        "country",
-        "status",
-        "companyId"
-      ],
+      "required": ["email", "country", "status", "companyId"],
       "properties": {
         "email": {
           "type": "string"
@@ -3483,13 +3472,7 @@
         "country": {
           "type": "string"
         },
-        "tags": {
-          "type": "array",
-          "items": {
-            "type": "string"
-          }
-        },
-        "catgeory": {
+        "category": {
           "type": "string"
         },
         "companyId": {
